@@ -524,10 +524,14 @@ void OvmsWebServer::HandleBmsCellMonitor(PageEntry_t& p, PageContext_t& c)
 {
   float stemwidth_v = 0.5, stemwidth_t = 0.5;
   float
-    volt_warn_def=BMS_DEFTHR_VWARN, volt_alert_def=BMS_DEFTHR_VALERT,
-    temp_warn_def=BMS_DEFTHR_TWARN, temp_alert_def=BMS_DEFTHR_TALERT;
-  float volt_warn=0, volt_alert=0, temp_warn=0, temp_alert=0;
-  bool alerts_enabled=true;
+    volt_warn_def = BMS_DEFTHR_VWARN, volt_alert_def = BMS_DEFTHR_VALERT,
+    volt_maxgrad_def = BMS_DEFTHR_VMAXGRAD, volt_maxsddev_def = BMS_DEFTHR_VMAXSDDEV,
+    temp_warn_def = BMS_DEFTHR_TWARN, temp_alert_def = BMS_DEFTHR_TALERT;
+  float
+    volt_warn = 0, volt_alert = 0,
+    volt_maxgrad = 0, volt_maxsddev = 0,
+    temp_warn = 0, temp_alert = 0;
+  bool alerts_enabled = true;
 
   // get vehicle BMS configuration:
   OvmsVehicle* vehicle = MyVehicleFactory.ActiveVehicle();
@@ -540,7 +544,7 @@ void OvmsWebServer::HandleBmsCellMonitor(PageEntry_t& p, PageContext_t& c)
     if (readings_t) {
       stemwidth_t   = 0.1 + 10.0 / readings_t;  //  7 → 1.5 … 96 → 0.4
     }
-    vehicle->BmsGetCellDefaultThresholdsVoltage(&volt_warn_def, &volt_alert_def);
+    vehicle->BmsGetCellDefaultThresholdsVoltage(&volt_warn_def, &volt_alert_def, &volt_maxgrad_def, &volt_maxsddev_def);
     vehicle->BmsGetCellDefaultThresholdsTemperature(&temp_warn_def, &temp_alert_def);
   }
 
@@ -558,6 +562,18 @@ void OvmsWebServer::HandleBmsCellMonitor(PageEntry_t& p, PageContext_t& c)
       MyConfig.SetParamValueFloat("vehicle", "bms.dev.voltage.alert", volt_alert);
     else
       MyConfig.SetParamValue("vehicle", "bms.dev.voltage.alert", "");
+
+    volt_maxgrad = atof(c.getvar("volt_maxgrad").c_str()) / 1000;
+    if (volt_maxgrad > 0)
+      MyConfig.SetParamValueFloat("vehicle", "bms.dev.voltage.maxgrad", volt_maxgrad);
+    else
+      MyConfig.SetParamValue("vehicle", "bms.dev.voltage.maxgrad", "");
+
+    volt_maxsddev = atof(c.getvar("volt_maxsddev").c_str()) / 1000;
+    if (volt_maxsddev > 0)
+      MyConfig.SetParamValueFloat("vehicle", "bms.dev.voltage.maxsddev", volt_maxsddev);
+    else
+      MyConfig.SetParamValue("vehicle", "bms.dev.voltage.maxsddev", "");
 
     temp_warn = atof(c.getvar("temp_warn").c_str());
     if (temp_warn > 0)
@@ -586,6 +602,8 @@ void OvmsWebServer::HandleBmsCellMonitor(PageEntry_t& p, PageContext_t& c)
   // read config:
   volt_warn = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.warn");
   volt_alert = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.alert");
+  volt_maxgrad = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.maxgrad");
+  volt_maxsddev = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.maxsddev");
   temp_warn = MyConfig.GetParamValueFloat("vehicle", "bms.dev.temp.warn");
   temp_alert = MyConfig.GetParamValueFloat("vehicle", "bms.dev.temp.alert");
   alerts_enabled = MyConfig.GetParamValueBool("vehicle", "bms.alerts.enabled", true);
@@ -594,17 +612,40 @@ void OvmsWebServer::HandleBmsCellMonitor(PageEntry_t& p, PageContext_t& c)
   PAGE_HOOK("body.pre");
 
   c.print(
-    "<div class=\"panel panel-primary panel-single\">\n"
+    "<div class=\"panel panel-primary panel-single receiver\" id=\"livestatus\">\n"
       "<div class=\"panel-heading\">BMS Cell Monitor</div>\n"
       "<div class=\"panel-body\">\n"
         "<div class=\"row\">\n"
-          "<div class=\"receiver\" id=\"livestatus\">\n"
-            "<div id=\"voltchart\" style=\"width: 100%; max-width: 100%; height: 45vh; min-height: 280px; margin: 0 auto\"></div>\n"
-            "<div id=\"tempchart\" style=\"width: 100%; max-width: 100%; height: 25vh; min-height: 160px; margin: 0 auto\"></div>\n"
-          "</div>\n"
+          "<div id=\"voltchart\" style=\"width: 100%; max-width: 100%; height: 45vh; min-height: 280px; margin: 0 auto\"></div>\n"
+          "<div id=\"tempchart\" style=\"width: 100%; max-width: 100%; height: 25vh; min-height: 160px; margin: 0 auto\"></div>\n"
         "</div>\n"
       "</div>\n"
       "<div class=\"panel-footer\">\n"
+        "<table class=\"table table-bordered table-condensed\">\n"
+          "<tbody>\n"
+            "<tr>\n"
+              "<th>Voltage</th>\n"
+              "<td>\n"
+              "<div class=\"metric number\" data-prec=\"3\" data-metric=\"v.b.p.voltage.avg\"><span class=\"label\">Cell avg</span><span class=\"value\">–</span><span class=\"unit\">V</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"3\" data-metric=\"v.b.p.voltage.min\"><span class=\"label\">Cell min</span><span class=\"value\">–</span><span class=\"unit\">V</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"3\" data-metric=\"v.b.p.voltage.max\"><span class=\"label\">Cell max</span><span class=\"value\">–</span><span class=\"unit\">V</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-scale=\"1000\" data-metric=\"v.b.p.voltage.stddev\"><span class=\"label\">StdDev</span><span class=\"value\">–</span><span class=\"unit\">mV</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-scale=\"1000\" data-metric=\"v.b.p.voltage.stddev.max\"><span class=\"label\">StdDev max</span><span class=\"value\">–</span><span class=\"unit\">mV</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-scale=\"1000\" data-metric=\"v.b.p.voltage.grad\"><span class=\"label\">Gradient</span><span class=\"value\">–</span><span class=\"unit\">mV</span></div>\n"
+              "</td>\n"
+            "</tr>\n"
+            "<tr>\n"
+              "<th>Temperature</th>\n"
+              "<td>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.p.temp.avg\"><span class=\"label\">Cell avg</span><span class=\"value\">–</span><span class=\"unit\">°C</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.p.temp.min\"><span class=\"label\">Cell min</span><span class=\"value\">–</span><span class=\"unit\">°C</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.p.temp.max\"><span class=\"label\">Cell max</span><span class=\"value\">–</span><span class=\"unit\">°C</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.p.temp.stddev\"><span class=\"label\">StdDev</span><span class=\"value\">–</span><span class=\"unit\">°C</span></div>\n"
+              "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.p.temp.stddev.max\"><span class=\"label\">StdDev max</span><span class=\"value\">–</span><span class=\"unit\">°C</span></div>\n"
+              "</td>\n"
+            "</tr>\n"
+          "</tbody>\n"
+        "</table>\n"
         "<button class=\"btn btn-default\" data-toggle=\"modal\" data-target=\"#cfg-dialog\">Alert config</button>\n"
         "<button class=\"btn btn-default\" data-cmd=\"bms reset\" data-target=\"#output\" data-watchcnt=\"0\">Reset min/max</button>\n"
         "<samp id=\"output\" class=\"samp-inline\"></samp>\n"
@@ -642,6 +683,17 @@ void OvmsWebServer::HandleBmsCellMonitor(PageEntry_t& p, PageContext_t& c)
   sdef.str(""); sdef << "Default: " << volt_alert_def * 1000;
   c.input("number", "Voltage alert", "volt_alert", sval.str().c_str(), sdef.str().c_str(),
     NULL, "min=\"1\" step=\"1\"", "mV");
+
+  sval << std::setprecision(1);
+  sdef << std::setprecision(1);
+  sval.str(""); if (volt_maxgrad > 0) sval << volt_maxgrad * 1000;
+  sdef.str(""); sdef << "Default: " << volt_maxgrad_def * 1000;
+  c.input("number", "Max valid gradient", "volt_maxgrad", sval.str().c_str(), sdef.str().c_str(),
+    NULL, "min=\"0\" step=\"0.1\"", "mV");
+  sval.str(""); if (volt_maxsddev > 0) sval << volt_maxsddev * 1000;
+  sdef.str(""); sdef << "Default: " << volt_maxsddev_def * 1000;
+  c.input("number", "Max stddev deviation", "volt_maxsddev", sval.str().c_str(), sdef.str().c_str(),
+    NULL, "min=\"0\" step=\"0.1\"", "mV");
 
   sval << std::setprecision(1);
   sdef << std::setprecision(1);
