@@ -61,6 +61,9 @@ static const char *TAG = "vehicle";
 #undef CEILPREC
 #define CEILPREC(fval,prec)  (ceil((fval)  * pow(10,(prec))) / pow(10,(prec)))
 
+// Voltage stddev running average sample count:
+#define VSTDDEV_SMOOTHCNT         5
+
 
 void OvmsVehicle::BmsSetCellArrangementVoltage(int readings, int readingspermodule)
   {
@@ -122,16 +125,22 @@ int OvmsVehicle::BmsGetCellArangementTemperature(int* readings, int* readingsper
   return m_bms_readings_t;
   }
 
-void OvmsVehicle::BmsSetCellDefaultThresholdsVoltage(float warn, float alert)
+void OvmsVehicle::BmsSetCellDefaultThresholdsVoltage(float warn, float alert,
+    float maxgrad /*=-1*/, float maxsddev /*=-1*/)
   {
   m_bms_defthr_vwarn = warn;
   m_bms_defthr_valert = alert;
+  m_bms_defthr_vmaxgrad = (maxgrad < 0) ? BMS_DEFTHR_VMAXGRAD : maxgrad;
+  m_bms_defthr_vmaxsddev = (maxsddev < 0) ? BMS_DEFTHR_VMAXSDDEV : maxsddev;
   }
 
-void OvmsVehicle::BmsGetCellDefaultThresholdsVoltage(float* warn, float* alert)
+void OvmsVehicle::BmsGetCellDefaultThresholdsVoltage(float* warn, float* alert,
+    float* maxgrad /*=NULL*/, float* maxsddev /*=NULL*/)
   {
   if (warn) *warn = m_bms_defthr_vwarn;
   if (alert) *alert = m_bms_defthr_valert;
+  if (maxgrad) *maxgrad = m_bms_defthr_vmaxgrad;
+  if (maxsddev) *maxsddev = m_bms_defthr_vmaxsddev;
   }
 
 void OvmsVehicle::BmsSetCellDefaultThresholdsTemperature(float warn, float alert)
@@ -178,7 +187,13 @@ void OvmsVehicle::BmsSetCellVoltage(int index, float value)
   if (m_bms_bitset_v[index] == false) m_bms_bitset_cv++;
   if (m_bms_bitset_cv == m_bms_readings_v)
     {
-    // get min, max, avg & standard deviation:
+    // Series complete, all cell voltages acquired
+    float thr_maxgrad  = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.maxgrad",  m_bms_defthr_vmaxgrad);
+    float thr_maxsddev = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.maxsddev", m_bms_defthr_vmaxsddev);
+    float thr_warn     = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.warn",     m_bms_defthr_vwarn);
+    float thr_alert    = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.alert",    m_bms_defthr_valert);
+
+    // Get min, max, avg & standard deviation:
     double sum=0, sqrsum=0, avg, stddev=0;
     float min=0, max=0;
     for (int i=0; i<m_bms_readings_v; i++)
@@ -192,37 +207,76 @@ void OvmsVehicle::BmsSetCellVoltage(int index, float value)
       }
     avg = sum / m_bms_readings_v;
     stddev = sqrt(LIMIT_MIN((sqrsum / m_bms_readings_v) - SQR(avg), 0));
-    // check cell deviations:
-    float dev;
-    float thr_warn  = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.warn", m_bms_defthr_vwarn);
-    float thr_alert = MyConfig.GetParamValueFloat("vehicle", "bms.dev.voltage.alert", m_bms_defthr_valert);
+
+    // Get gradient:
+    double sumn = 0, sumd = 0;
     for (int i=0; i<m_bms_readings_v; i++)
       {
-      dev = ROUNDPREC(m_bms_voltages[i] - avg, 5);
-      if (ABS(dev) > ABS(m_bms_vdevmaxs[i]))
-        m_bms_vdevmaxs[i] = dev;
-      if (ABS(dev) >= thr_alert && m_bms_valerts[i] < 2)
-        {
-        m_bms_valerts[i] = 2;
-        m_bms_valerts_new++; // trigger notification
-        }
-      else if (ABS(dev) >= thr_warn && m_bms_valerts[i] < 1)
-        m_bms_valerts[i] = 1;
+      sumn += (i - (m_bms_readings_v / 2 - 0.5)) * (m_bms_voltages[i] - avg);
+      sumd += SQR(i - (m_bms_readings_v / 2 - 0.5));
       }
-    // publish to metrics:
-    avg = ROUNDPREC(avg, 5);
-    stddev = ROUNDPREC(stddev, 5);
+    float grad = (sumn / sumd) * m_bms_readings_v;
+
+    // …publish to metrics:
     StandardMetrics.ms_v_bat_pack_vmin->SetValue(min);
     StandardMetrics.ms_v_bat_pack_vmax->SetValue(max);
-    StandardMetrics.ms_v_bat_pack_vavg->SetValue(avg);
-    StandardMetrics.ms_v_bat_pack_vstddev->SetValue(stddev);
-    if (stddev > StandardMetrics.ms_v_bat_pack_vstddev_max->AsFloat())
-      StandardMetrics.ms_v_bat_pack_vstddev_max->SetValue(stddev);
+    StandardMetrics.ms_v_bat_pack_vavg->SetValue(ROUNDPREC(avg, 5));
+    StandardMetrics.ms_v_bat_pack_vstddev->SetValue(ROUNDPREC(stddev, 5));
+    StandardMetrics.ms_v_bat_pack_vgrad->SetValue(ROUNDPREC(grad, 5));
     StandardMetrics.ms_v_bat_cell_voltage->SetElemValues(0, m_bms_readings_v, m_bms_voltages);
     StandardMetrics.ms_v_bat_cell_vmin->SetElemValues(0, m_bms_readings_v, m_bms_vmins);
     StandardMetrics.ms_v_bat_cell_vmax->SetElemValues(0, m_bms_readings_v, m_bms_vmaxs);
-    StandardMetrics.ms_v_bat_cell_vdevmax->SetElemValues(0, m_bms_readings_v, m_bms_vdevmaxs);
-    StandardMetrics.ms_v_bat_cell_valert->SetElemValues(0, m_bms_readings_v, m_bms_valerts);
+
+    // Voltages are very volatile and may respond to a load change within the sensor query loop.
+    // To detect an inconsistent series, we check for a too high gradient and/or a too high
+    // offset of the momentary stddev level from the previously observed average:
+    bool series_valid;
+    if (ABS(grad) > thr_maxgrad)
+      {
+      series_valid = false;
+      }
+    else if (m_bms_vstddev_cnt < VSTDDEV_SMOOTHCNT)
+      {
+      // skip the first VSTDDEV_SMOOTHCNT series to init the average:
+      m_bms_vstddev_cnt++;
+      m_bms_vstddev_avg = ((m_bms_vstddev_cnt-1) * m_bms_vstddev_avg + stddev) / m_bms_vstddev_cnt;
+      series_valid = false;
+      }
+    else if (stddev - m_bms_vstddev_avg > thr_maxsddev)
+      {
+      series_valid = false;
+      }
+    else
+      {
+      m_bms_vstddev_avg = ((VSTDDEV_SMOOTHCNT-1) * m_bms_vstddev_avg + stddev) / VSTDDEV_SMOOTHCNT;
+      series_valid = true;
+      }
+
+    // Check cell deviations only if the series appears to be consistent:
+    if (series_valid)
+      {
+      float dev;
+      for (int i=0; i<m_bms_readings_v; i++)
+        {
+        dev = ROUNDPREC(m_bms_voltages[i] - avg, 5);
+        if (ABS(dev) > ABS(m_bms_vdevmaxs[i]))
+          m_bms_vdevmaxs[i] = dev;
+        if (ABS(dev) >= stddev + thr_alert && m_bms_valerts[i] < 2)
+          {
+          m_bms_valerts[i] = 2;
+          m_bms_valerts_new++; // trigger notification
+          }
+        else if (ABS(dev) >= stddev + thr_warn && m_bms_valerts[i] < 1)
+          m_bms_valerts[i] = 1;
+        }
+
+      // Publish deviation maximums & alerts:
+      if (stddev > StandardMetrics.ms_v_bat_pack_vstddev_max->AsFloat())
+        StandardMetrics.ms_v_bat_pack_vstddev_max->SetValue(stddev);
+      StandardMetrics.ms_v_bat_cell_vdevmax->SetElemValues(0, m_bms_readings_v, m_bms_vdevmaxs);
+      StandardMetrics.ms_v_bat_cell_valert->SetElemValues(0, m_bms_readings_v, m_bms_valerts);
+      }
+
     // complete:
     m_bms_has_voltages = true;
     m_bms_bitset_v.clear();
@@ -255,6 +309,10 @@ void OvmsVehicle::BmsSetCellTemperature(int index, float value)
   if (m_bms_bitset_t[index] == false) m_bms_bitset_ct++;
   if (m_bms_bitset_ct == m_bms_readings_t)
     {
+    // Series complete, all cell temperatures acquired
+    float thr_warn  = MyConfig.GetParamValueFloat("vehicle", "bms.dev.temp.warn", m_bms_defthr_twarn);
+    float thr_alert = MyConfig.GetParamValueFloat("vehicle", "bms.dev.temp.alert", m_bms_defthr_talert);
+
     // get min, max, avg & standard deviation:
     double sum=0, sqrsum=0, avg, stddev=0;
     float min=0, max=0;
@@ -269,23 +327,23 @@ void OvmsVehicle::BmsSetCellTemperature(int index, float value)
       }
     avg = sum / m_bms_readings_t;
     stddev = sqrt(LIMIT_MIN((sqrsum / m_bms_readings_t) - SQR(avg), 0));
+
     // check cell deviations:
     float dev;
-    float thr_warn  = MyConfig.GetParamValueFloat("vehicle", "bms.dev.temp.warn", m_bms_defthr_twarn);
-    float thr_alert = MyConfig.GetParamValueFloat("vehicle", "bms.dev.temp.alert", m_bms_defthr_talert);
     for (int i=0; i<m_bms_readings_t; i++)
       {
       dev = ROUNDPREC(m_bms_temperatures[i] - avg, 2);
       if (ABS(dev) > ABS(m_bms_tdevmaxs[i]))
         m_bms_tdevmaxs[i] = dev;
-      if (ABS(dev) >= thr_alert && m_bms_talerts[i] < 2)
+      if (ABS(dev) >= stddev + thr_alert && m_bms_talerts[i] < 2)
         {
         m_bms_talerts[i] = 2;
         m_bms_talerts_new++; // trigger notification
         }
-      else if (ABS(dev) >= thr_warn && m_bms_valerts[i] < 1)
+      else if (ABS(dev) >= stddev + thr_warn && m_bms_valerts[i] < 1)
         m_bms_talerts[i] = 1;
       }
+
     // publish to metrics:
     avg = ROUNDPREC(avg, 2);
     stddev = ROUNDPREC(stddev, 2);
@@ -300,6 +358,7 @@ void OvmsVehicle::BmsSetCellTemperature(int index, float value)
     StandardMetrics.ms_v_bat_cell_tmax->SetElemValues(0, m_bms_readings_t, m_bms_tmaxs);
     StandardMetrics.ms_v_bat_cell_tdevmax->SetElemValues(0, m_bms_readings_t, m_bms_tdevmaxs);
     StandardMetrics.ms_v_bat_cell_talert->SetElemValues(0, m_bms_readings_t, m_bms_talerts);
+
     // complete:
     m_bms_has_temperatures = true;
     m_bms_bitset_t.clear();
@@ -342,6 +401,8 @@ void OvmsVehicle::BmsResetCellVoltages(bool full /*=false*/)
       m_bms_valerts[k] = 0;
       }
     m_bms_valerts_new = 0;
+    m_bms_vstddev_cnt = 0;
+    m_bms_vstddev_avg = 0;
     if (full) StandardMetrics.ms_v_bat_cell_voltage->ClearValue();
     StandardMetrics.ms_v_bat_cell_vmin->ClearValue();
     StandardMetrics.ms_v_bat_cell_vmax->ClearValue();
